# RustSeminar

./: README.md
exercise_1/src/: main.rs
exercise_2/src/: main.rs
exercise_6/: Cargo.toml
exercise_6/benches/: benchmark.rs
exercise_6/src/: lib.rs  main.rs
